fixed loader position problem on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -85,19 +85,23 @@ h3 {
     left: 0;
     /*margin: 0;*/
     /*overflow: auto;*/
+    position: relative;
     display: block;
 }
 
 .loader {
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%,0);
+    position:absolute;
+    left:0;
+    right:0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    margin-left:auto;
+    width:30px;
+    height: 30px;
     border: 6px solid #dddddd; 
     border-top: 6px solid #000000; 
     border-radius: 50%;
-    width: 30px;
-    height: 30px;
     animation: spin 1s linear infinite;
 }
 
